Fix statistics section alignment

--- a/src/components/legend/LegendItem.module.css
+++ b/src/components/legend/LegendItem.module.css
@@ -1,15 +1,14 @@
-.colorBlock {
-    display: inline-block;
-    height: 1rem;
-    width: 2rem;
-    border: 1px solid black;
-    margin-right: 0.5rem;
+.legendItem {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  column-gap: 0.5rem;
+  margin-right: 1rem;
 }
 
-.label {
-    display: inline-block;
-    margin-right: 1rem;
-}
-.label:last-of-type{
-    margin-right: 0;
+.colorBlock {
+  display: inline-block;
+  height: 1rem;
+  width: 2rem;
+  border: 1px solid black;
 }
